fix(styles): fix gap

--- a/src/pages/genrePage/genrePage.css
+++ b/src/pages/genrePage/genrePage.css
@@ -16,7 +16,6 @@
 	max-width: 100vw;
 	box-sizing: border-box;
 	gap: 3.75rem;
-	padding-top: 6rem;
 }
 
 .films {
@@ -35,7 +34,7 @@
 	padding: 0.7813rem 0;
 	padding-left: 7.5rem;
 	padding-right: 7.5rem;
-	margin-top: 1rem;
+	margin-top: 7rem;
 }
 
 .genre-content__title {
